
 * german and serbian translations
 * range editor
 * selecting several instruments or presets shows the editing table for all global divisions
 * selecting "Samples", "Instruments" or "Presets" in the tree shows an overview page
 * tools are allowed when several instruments or presets are selected in the tree
 * pasting modulators is allowed for several divisions
 * sf3 import / export
 * (fix) left / right attributes were lost after duplicating linked samples

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 27 Sep 2015 20:51:55 +0100


polyphone (1.6) UNRELEASED; urgency=low

 * full screen mode
 * visibility of all soundfonts or just a specific soundfont in the tree
 * possibility to merge presets from different soundfonts to one sf2 via the export
 * export of samples from different soundfonts is allowed
 * in the virtual keyboard, using "shift" with an arrow makes a quicker move
 * option to move (or not) keyrange in the transposition tool for instruments
 * mutations available for 64' resultant in the organ mixture creation tool
 * tolerance for opcodes comprising no underscore (sfz opcodes v1)
 * several libraries updated (including portaudio, stk)
 * (fix) sfArk import generated noise
 * (fix) repetition is ignored when using arrow keys in the virtual keyboard
 * (fix) "0" was not selected when a new value is inserted in the table
 * (fix) forbidden characters are replaced by an underscore when exporting files
 * (fix) selection in the tree now updates the virtual keyboard
 * (fix) copy / paste of elements
 * (fix) GUI fix for mac
 * (fix) loop_mode one-shot caused sometimes a wrong envelop release in the sfz import

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 27 May 2015 20:11:10 +0100


polyphone (1.5) UNRELEASED; urgency=low

 * italian translation
 * transposition tool
 * more options when renaming several elements
 * tool to remove all modulators
 * improved copy / paste functions in tables
 * improved copy / paste functions for modulators